--- a/chap-results.tex
+++ b/chap-results.tex
@@ -292,6 +292,7 @@ The San Miguel scene is a good example for this: While the small detail work lik
 \1 memory usage
     \2 one additional buffer
 \1 discussion
+\1 possibly put the VPL shuffling comparison here
 
 \end{outline}
 
