--- a/chap-implementation.tex
+++ b/chap-implementation.tex
@@ -4,6 +4,8 @@
 \chapter{Implementation}
 \label{chap:implementation}
 
+\todo{mention repository. decide on repository name, and maybe github name. give the repository a license.}
+
 \section{Used Framework and Libraries}
 
 \begin{figure}[htbp]
@@ -12,17 +14,12 @@
   \caption{svg image}
 \end{figure}
 
-\begin{outline}
-\1 gloperate as framework
-    \2 uses qt
-\1 libzeug provides GUI elements
-\1 globjects as an object-oriented abstraction over OpenGL
-\1 glbinding provides OpenGL bindings, directly called sometimes
-\1 GLM provides math and easier interaction with the OpenGL API
-\1 no further relevance for this thesis:
-    \2 assimp for model loading
-    \2 glkernel provides kernels for our SSAO implementation
-\end{outline}
+The implementation was built using C++ and OpenGL. It uses \textit{gloperate}\footnote{\url{https://github.com/cginternals/gloperate}} as framework, which provides some basic functionality like navigation and resource handling. \textit{gloperate} in turn is based on Qt\footnote{\url{https://www.qt.io/}}, which is used for context creation and the UI. \textit{libzeug}\footnote{\url{https://github.com/cginternals/libzeug}} is used to provide GUI widgets for quick manipulation of the rendering's parameters.
+
+\textit{globjects}\footnote{\url{https://github.com/cginternals/globjects}} provides a convenience abstraction layer around the OpenGL API, which is in some places directly accessed using \textit{glbinding}\footnote{\url{https://github.com/cginternals/glbinding}}. For math functions and interaction with \textit{globjects}, \textit{glm}\footnote{\url{http://glm.g-truc.net}} is used.
+
+Additionally, \textit{assimp}\footnote{\url{http://www.assimp.org/}} is used to load the test scenes.
+
 
 \section{Rendering Pipeline Overview}
 \begin{outline}
@@ -39,23 +36,19 @@
 \1 kernel generation?
 \end{outline}
 
+\todo[color=blue]{textify rendering pipeline overview implementation}
+
 
 \section{RSM Generation and VPL Sampling}
 \label{sec:impl:rsmAndVplSampling}
-\begin{outline}
-\1 use the same code for RSM generation as for G-Buffer generation with only slight modifications:
-\1 do not use normalmaps as the triangle normals are sufficient
-\1 instead of individual texture lookups, we use the material's average color as diffuse color as suggested by \citet{hedman2016sequential} to avoid high-frequency color changes to affect the outcome.
-\1 we re-use RSM as shadow map
-    \2 usually, one might want to decouple this since they likely need different resolutions/cascading schemes etc. One could also render the RSM with a less detailed version of the scene. Since we had no culling and LOD implemented, we were bottlenecked on geometry complexity and chose to do this in one pass.
-    \2 we use variance shadow mapping. so we add the variance buffer if we're rendering an RSM, and disable another buffer (non-face normals).
 
-\1 with a compute shader, we sample the RSM in a regular pattern and write VPLs into a buffer
-\1 VPLs are position, normal, color
-\1 we prepare a second buffer with a single vec4 with position in the first three values and normal packed into the last value.
-\1 we do that since the ISM rendering (Section~\ref{sec:impl:ismRendering}) and light list calculation (Section~\ref{sec:impl:clusteredShading}) do not need color and especially ISM rendering reads several VPLs per point, using a lot of bandwidth.
-\1 Because of the regular sampling, the noise produced during interleaved shading (Section~\ref{sec:impl:interleavedShading} or only results? there was a paper that sorts VPLs to avoid the noise...) is more structured. To help with that, we permutate the VPL order with a random permutation computed on CPU
-\end{outline}
+The RSM generation mostly uses the same code as the G-Buffer generation, barring a few modifications: First, normal maps are ignored and triangle normals are used instead, and instead of individual texture lookups during shading, the material's average color is used as diffuse color. Both these changes are made in order to avoid high-frequency normal and changes in the RSM, which can only be captured correctly with a larger number of VPLs.
+
+Additionally, the RSM is re-used as conventional shadow map. Usually, one might want to decouple RSM and conventional shadow map generation to use different resolutions or cascading schemes. It would also be possible to render the RSM with a less detailed version of the scene. Since we had no culling and LOD techniques available, we were bottlenecked on geometry complexity and chose to render both RSM and conventional shadow map in one pass. As a result, we render one additional variance buffer for use with the variance shadow mapping technique \citep{Donnelly:2006:VSM}.
+
+Following the RSM generation, a compute shader samples the RSM in a regular pattern and writes the world-space position, normal and color of the sample points into a separate buffer. These information form the VPLs.
+
+Additionally, a second buffer is prepared that, instead of three three-component vectors, stores only one four-component vector, holding the VPL's position in the first three components and the normal packed into the last component. This is done since the ISM rendering (\Cref{sec:impl:ismRendering}) and light list calculation (\Cref{sec:impl:clusteredShading}) do not need the color information and especially the ISM rendering reads several VPLs per point, using a lot of bandwidth.
 
 
 \section{ISM Rendering}
@@ -141,25 +134,31 @@ Note that there is still lots of room for optimization. Especially the pull phas
 
 \section{Interleaved Shading with Compute Shaders}
 \label{sec:impl:interleavedShading}
-\begin{outline}
-\1 often, de-interleaving is implemented by splitting the G-buffer into several smaller G-buffers, each containing all pixels with the same sample set \cite{segovia2006non}. Each G-buffer is processed with its respective sample set, and then the buffers are re-interleaved into a large G-Buffer again.
 
-\1 instead, we do this in a single pass. compute shaders are launched so that each invocation processes one pixel, and invocations within a work group process the same VPL set.
-\1 \ref{lst:???}?
-\1 diagram of the pixels. \ref{fig:impl:pixels} explain this. we still do coherent VPL processing.
-\1 more explanation on id calculation
-\1 reasons for single pass? 1. Easier to implement. 2. Basically, we completely remove the separate interleaving and deinterleaving step and simply change the read and write patterns, saving on the absolute amount of memory read and written. 3. Less memory used since no additional buffers are needed. 4. scales better to 8x8 interleaving pattern, since 64 interleaving sections ??? might introduce significant overhead (interleaving through buffers: maximum render targets often 8 or 16, so now multiple passes needed, interleaving through shared memory: becomes impossible, too large work groups, too much shared memory needed)
-\1 potential downside is that we introduce one scattered read compared to several coherent reads in the buffer splitting method. but, bottleneck is lookups in the VPL buffer and the respective shadow maps in the main loop, as well as ALU operations, so this one-time lookup doesn't have any impact. maybe completely latency covered or workgroups are distributed in a way that the reads are still cache-coherent.
-\1 in fact, any attempts to do coherent reads did not result in speedups.
+The presented implementation performs interleaved shading, that is, it processes only a fraction of all VPLs per pixel and uses a blur pass to mask the resulting noise. Since adjacent pixels now process different sets of VPLs, this approach results in low cache coherence. To this end, de-interleaving has been proposed \citep{segovia2006non}.
+
+Often, de-interleaving is implemented by splitting the G-buffer into several smaller G-buffers, each containing all pixels with the same sample set. Each G-buffer is processed with its respective sample set, and then the buffers are re-interleaved into a large G-Buffer again.
+
+We propose to perform de-interleaving, sample processing and re-interleaving in a single pass using compute shaders. Just like with the original method, each work group processes a set of pixels that use the same set of VPLs. But instead of performing coherent reads and writes, making it necessary to first split the G-Buffer and then re-interleave it, we propose to let the compute shader read and write directly to the respective pixels in the G-Buffer. See \Cref{???} for a comparison of the two approaches.
+
+\todo{Figure: interleaved shading: Compare buffer splitting vs compute shaders}
+
+There are several reasons for this approach: First, it is easier to implement, since the buffer splitting and re-interleaving phases are not needed anymore. Second, as another consequence of eliminating these phases, the total amount of memory read and written is greatly reduces, potentially saving bandwidth. And third, no additional storage is needed.
+
+A potential downside is that this technique performs one scattered read of the G-Buffers, compared to several coherent reads performed by the buffer splitting method. However, the bottleneck of the final gathering phase lies within the loop over the VPLs, so this one-time scattered read is likely to not have any impact but to be swallowed by latency-covering techniques of the GPU. Theoretically, the works groups could be distributed over the GPU's processor clusters (Streaming Multiprocessors on NVIDIA, Compute Units on AMD) in a way that adjacent pixels are still processed on the same cluster, but unfortunately application developers have no control over this.
 
 \todo[color=yellow]{investigate into interleaving via shared memory in 2x2 groups}
 \todo{write hedman, how did they do the 8x8 interleaving? or maybe check his master thesis first}
 
-\1 Since only a subset of all samples is processed per pixel and this subset repeats every four pixels, this process results in structured noise (see Figure \ref{fig:???} or this figure in concept?)
-\1 therefore, geometry-aware blur similar to \citet{laine2007incremental}. doesn't smooth over edges. two passes for vertical and horizontal. See code snippet \ref{listing:???}.
+Since only a subset of all samples is processed per pixel and this subset repeats every four pixels, interleaved shading results in structured noise. (see Figure \ref{fig:???} or this figure in concept?). To this end, a geometry-aware blur similar to \citet{laine2007incremental} is often used. The geometry-awareness is needed to prevent light from bleeding over geometry edges. Although the blur filter is not separable due to its geometry-awareness, we implement it in a separated fashion, trading a neglibile quality impact for large performance benefits.
 
-\1 VPL shuffling helps a great deal! See Figure \ref{fig:impl:shuffling}
-\end{outline}
+\todo{implementation: interleaved: figure of noise here? or just in results?}
+
+
+Because of the regular sampling, the noise produced during interleaved shading (\Cref{sec:impl:interleavedShading}) is more structured and harder to mask by the blur pass. To alleviate that, we permutate the VPL order with a random permutation computed on the CPU. See \Cref{sec:results:interleavedShading} for the effects of this small optimization.
+
+While the geometry-aware blur achieves perfect result on even surfaces, the structured noise is harder to mask along geometry edges due to missing information. This problem becomes even more apparent when using regular VPL sampling, which makes each pixel use VPLs that are near each other. This results in e.g. the first pixel inside a 4x4 block to use VPLs that are near the pixel's location, but the second pixel uses VPLs that are all farther away, causing the differences between the pixels to be amplified. To this end, the order of the VPLs in the VPL buffer created during the VPL sampling phase is simply shuffled, using a fixed permutation precomputed on the CPU. See \Cref{sec:results:interleavedShading} for the effects of this small optimization.
+
 
 \section{Clustered Deferred Shading}
 \label{sec:impl:clusteredShading}
@@ -211,4 +210,4 @@ Note that there is still lots of room for optimization. Especially the pull phas
 \todo{what openGL version do i require? also, i should look up which dedicated GPUs support 4.5/4.4 and what Intels GPUs say. maybe point out the need for modern OpenGL more? also, how they make it easier to implement.}
 \end{outline}
 
-\todo[color=blue]{textify implementation}
+\todo[color=blue]{textify clustered shading implementation}
