--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1101,3 +1101,21 @@ abstract = { Abstract In this article we describe and investigate tiled shading.
  publisher = {Coriolis Group Books},
  address = {Scottsdale, AZ, USA},
 }
+
+@inproceedings{Donnelly:2006:VSM,
+ author = {Donnelly, William and Lauritzen, Andrew},
+ title = {Variance Shadow Maps},
+ booktitle = {Proceedings of the 2006 Symposium on Interactive 3D Graphics and Games},
+ series = {I3D '06},
+ year = {2006},
+ isbn = {1-59593-295-X},
+ location = {Redwood City, California},
+ pages = {161--165},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/1111411.1111440},
+ doi = {10.1145/1111411.1111440},
+ acmid = {1111440},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {graphics hardware, real-time rendering, shader programming, shadow maps},
+}
